--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -27,7 +27,7 @@ const formatTechs = (values: string[]) =>
     !isComingSoon && (
       <a
         class="group flex w-full cursor-pointer flex-col justify-between gap-2 rounded-md border border-neutral-700 p-4 transition-all duration-300 hover:-translate-y-2 hover:border-neutral-400 md:flex-row md:items-center"
-        href={link}
+        href={`/my-portfolio/${link}`}
         target="_blank"
       >
         <div class="flex flex-col gap-4 md:flex-row md:items-center">
