--- a/src/components/seo/SEOTags.astro
+++ b/src/components/seo/SEOTags.astro
@@ -44,8 +44,8 @@ const openGraph = {
     }}
     extend={{
       link: [
-        { rel: "icon", href: "/favicon.svg" },
-        { rel: "sitemap", href: "/sitemap-index.xml" },
+        { rel: "icon", href: "/my-portfolio/favicon.jpeg" },
+        { rel: "sitemap", href: "/my-portfolio/sitemap-index.xml" },
       ],
       meta: [
         { name: "viewport", content: "width=device-width, initial-scale=1" },
